# finance-manage

./: .env  .gitignore  .prettierignore  Dockfile  README.md  middleware.js  next.config.js  package-lock.json  package.json  tailwind.config.js
app/: layout.jsx  loading.js  not-found.js  page.jsx
app/(auth)/login/: page.jsx
app/(dashboard)/: layout.jsx
app/(dashboard)/dashboard/: page.jsx
app/(dashboard)/dashboard/canvas/: page.jsx
app/(dashboard)/dashboard/data-manage/: page.jsx
app/(dashboard)/documentation/: layout.jsx  page.jsx
app/api/data/: route.js
app/api/finance/debts/: route.js
finance-cal/: Cargo.toml
finance-cal/pkg/: index.d.ts  index.js  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
finance-cal/src/: canvas.rs  lib.rs  loan_calculator.rs
lib/: auth.js  finance.js  finance.test.js  utils.js
prisma/: schema.prisma  seed.js  temp.js
prisma/migrations/20230718021858_/: migration.sql
prisma/migrations/20230720013028_finance/: migration.sql
prisma/migrations/20230721075958_/: migration.sql
prisma/migrations/20230725022636_dev/: migration.sql
prisma/migrations/20230803091222_/: migration.sql
prisma/migrations/20230803091301_/: migration.sql
tests/: test-hash.js
types/: enums.js
ui/: AntdRegistry.jsx  Button.jsx  Calendar.jsx  DashBoardNavBar.jsx  FinanceCalendar.jsx  FinanceTabs.jsx  GlobalNav.jsx  LargeHeading.jsx  NavBar.jsx  Pagination.jsx  Paragraph.jsx  Providers.jsx  SignInButton.jsx  SignInGithubButton.jsx  SignOutButton.jsx  Table.jsx  UserLoginForm.jsx  mergeSearch.js
ui/main-page/: DrawTest.jsx
(+4 files in other folders)
