[package]
name = "finance-cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = "0.3.23"
log = "0.4.19"

[dev-dependencies]
wasm-bindgen-test = "0.2"
